package knowledge.pub;

message MapFieldEntry {
  required string key = 1;
  optional Payload value = 2;
}

message Payload{
  optional double double_value = 1;
  repeated double double_array = 2;
  optional int64 long_value = 3;
  repeated int64 long_array = 4;
  optional string string_value = 5;
  repeated string string_array = 6;
  repeated MapFieldEntry map = 7;
}


message TestBucket {
  required string name = 1 [default = ""];
  optional int32 value = 2;
  optional string description = 3;
  optional Payload payload = 4;
}

message Range{
  required int32 bucket_value = 1;
  required double length = 2;
}

message Allocation{
  optional string rule = 1;
  repeated Range ranges = 2;
}

enum TestType{
  RANDOM = 1;
  QIPU_ID_HASH = 2;
}

message TestDefinition{
  repeated MapFieldEntry constants = 1;
  optional string name = 2;
  optional string version = 3;
  optional string salt = 4;
  optional string rule = 5;
  repeated TestBucket buckets = 6;
  repeated Allocation allocations = 7;
  optional TestType test_type = 8 [default = RANDOM];
  optional string description = 9;
}